unpackaged/main/default/objects/Completion_Code__c/Completion_Code__c.object-meta.xml
<CustomObject>
    <label>Completion Code</label>
    <nameField>
        <label>Completion Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completion Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>