unpackaged/main/default/objects/Completion_Code__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Completion Code</relationshipLabel>
    <relationshipName>Completion_Code_Members</relationshipName>
    <type>Lookup</type>
</CustomField>