unpackaged/main/default/objects/Completion_Code__c/listViews/All_Completion_Codes.listView-meta.xml
<ListView>
    <fullName>All_Completion_Codes</fullName>
    <columns>NAME</columns>
    <columns>Activity_ID__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Completion Codes</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>