unpackaged/main/default/objects/Completion_Code__c/listViews/All_incompletion_Codes.listView-meta.xml
<ListView>
    <fullName>All_incompletion_Codes</fullName>
    <columns>NAME</columns>
    <columns>Activity_ID__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <label>All incompletion Codes</label>
</ListView>